# cpp_python

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  RUN_SUCCESS.md  build_script.bat  compile.bat  find_pybind11.py
docs/: API_Reference.md  Bidirectional_Bridge_Guide.md  Bridge_Guide.md
examples/: cpp_library.cpp  cpp_library.h  main.cpp  python_bindings.cpp
examples/python_scripts/: math_operations.py  run_python_to_cpp_example.py  test_cpp_bridge.py
include/: cpp_module_wrapper.h  cpp_module_wrapper.inl  error_handler.h  python_bridge.h  type_converter.h  type_converter.inl
src/: cpp_module_wrapper.cpp  error_handler.cpp  python_bridge.cpp  type_converter.cpp
tests/: test_bridge.cpp
